// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile renders correctly given correct prop 1`] = `
<div
  className="sc-bdVaJa dNvljY"
  onClick={[Function]}
>
  <span
    className="tile-number"
  >
    0
  </span>
</div>
`;

exports[`Tile renders correctly given custom number 1`] = `
<div
  className="sc-bdVaJa cayjrY"
  onClick={[Function]}
>
  <span
    className="tile-number"
  >
    13
  </span>
</div>
`;

exports[`Tile renders correctly given default number 1`] = `
<div
  className="sc-bdVaJa iaUWgb"
  onClick={[Function]}
>
  <span
    className="tile-number"
  >
    0
  </span>
</div>
`;

exports[`Tile renders correctly given visible prop 1`] = `
<div
  className="sc-bdVaJa QdGEq tile-invisible"
  onClick={[Function]}
>
  <span
    className="tile-number"
  >
    0
  </span>
</div>
`;
